--- a/hello.html
+++ b/hello.html
@@ -1,3 +1,3 @@
 <h1>Hello</h1>
 <h2>Hello</h2>
-<img src="C:\Users\Babuuu\Desktop\photo.jfif">
+<img src="C:\Users\Babuuu\Desktop\nature photo.jpg" width="200px" height="200px">
